foundational/DeclarativeDeployment/service-and-ingress.yml
# Service and Ingress objects for accessing the example Deployment
apiVersion: v1
kind: Service
metadata:
  name: random-generator
spec:
  selector:
    app: random-generator
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: random-generator
spec:
  backend:
    serviceName: random-generator
    servicePort: 8080
